2011-10-19  Araki Ken  <arakiken@users.sf.net>

	* vte.c:
	  - Almost all parts of code in vte_terminal_unrealize() is moved to
	    vte_terminal_finalize().
	  - Dummy x_screen_t is created before x_display_remove_root() in
	    vte_terminal_unrealize() in case terminal will be realized again.

	* xwindow.[ch]: x_window_hide() is added.

	* gtk/Makefile.in, configure.in: Name of libvte using gtk+-3.0 is libvte2_90.

2011-10-17  Araki Ken  <arakiken@users.sf.net>

	* vte.c: pty_list and open_pty of x_system_event_listener_t are
	  implemented for mlterm-menu.

	* ml_term_manager.c, mlterm/Makefile.in:
	  If executing auto_restart_cmd failed, do execl(BINDIR "/mlterm")
	  instead of execlp("mlterm").

2011-10-16  Araki Ken  <arakiken@users.sf.net>

	* kiklib/kik_conf.[ch]:
	  - kik_conf_new(): No argument.
	  - kik_init_prog(), kik_get_prog_path(): Added.

	* kiklib/Makefile.in: 13.1 => 14.0

	* ml_term_manager.c:
	  - Even if SIGSEGV, SIGABRT, SIGBUS or SIGQUIT is received, all opened ptys
	    survive and are inherited to restarted mlterm, unless "auto_restart" option
	    is "false".

	* mc_combo.c, mc_font.c: gtk_widget_set_size_request(... , 0) ->
	  gtk_widget_set_size_request(... , -1)

	* vte.c:
	  - PROP_VADJUSTMENT property is supported.
	  - "word_separators", "compose_dec_special_font" and "use_cp932_ucs_for_xft"
	    options in ~/.mlterm/main are avaialble.

2011-10-12  Araki Ken  <arakiken@users.sf.net>

	* vte.c: "inner-border" property is set in GTK+-3.0.

2011-10-11  Araki Ken  <arakiken@users.sf.net>

	* configure.in: --with-gtk=(2.0|3.0) option is added.

	* tool/mlconfig/*.c, contrib/tool/mlterm-menu/mlterm-menu.c:
	  Experimental support for GTK+ 3.0 is added.

	* gtk/vte.c:
	  - Experimental support for GTK+ 3.0 is added.
	  - If child_pid is NULL or not is checked in vte_terminal_fork_full_command_full()
	    is checked.

2011-10-09  Araki Ken  <arakiken@users.sf.net>

	* x_window.c, x_window_win32.c: Edges of a window is cleared,